actually linked the stylesheet, this time

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <link href="https://fonts.googleapis.com/css?family=Open+Sans" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css?family=Noto+Sans+JP" rel="stylesheet">
   <link href="https://x3dom.org/download/1.7.2/x3dom.css" rel="stylesheet">
-  <link href="stylesheet.css" rel="stylesheet">
+  <link href="css.css" rel="stylesheet">
   <script src="https://x3dom.org/download/1.7.2/x3dom.js"></script>
 
 </head>
